<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efebe9"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efebe9"
        android:orientation="vertical"        android:padding="20dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="#b39ddb"
            android:gravity="center"
            android:text="Hola Amigos!"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <TextView
            style="@style/font"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/from"
            />

        <EditText
            android:id="@+id/from"
            style="@style/font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="text" />
        <TextView
            style="@style/font"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/to"
            />

        <EditText
            android:id="@+id/to"
            style="@style/font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="friend_s_name"
            />
        <TextView
            style="@style/font"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_marginTop="20dp"
            android:text="@string/heading"
            />

        <EditText
            android:id="@+id/heading"
            style="@style/font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            />

        <TextView
            style="@style/font"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/message" />

        <EditText
            android:id="@+id/message"
            style="style/font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="write_message"
             />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#b39ddb"
            android:gravity="center"
            android:text="@string/create_card"
            android:textSize="22sp"
            />

    </LinearLayout>
</ScrollView>